# painterPath_QSGNode

./: CMakeLists.txt  README.md  SGPainterPathProxy.cpp  SGPainterPathProxy.h  brushNode.cpp  brushNode.h  main.cpp  main.qml  pathNode.cpp  pathNode.h  penNode.cpp  penNode.h  proxyItem.cpp  proxyItem.h  res.qrc  shader.cpp  shader.h
shaders/: brush.fsh  brush.vsh
